nosotras animacion, alineacion footer y contacto

--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@ body {
   transition: all 1s;
 }
 .container-img .evento-descripcion figure .btn:hover, .home-nosotras .btn.nos:hover, .body-home .container .row .cont-card .card-home .btn:hover {
-  background-color: #747c58;
-  color: rgb(243, 243, 225);
+  background-color: rgb(219, 206, 161);
+  color: white;
   transform: scale(1.1);
 }
 .container-img .evento-descripcion figure .btn a, .home-nosotras .btn.nos a, .body-home .container .row .cont-card .card-home .btn a {
@@ -236,7 +236,7 @@ footer {
 footer .foot {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: row;
   flex-wrap: wrap;
   max-width: 1140px;
@@ -429,62 +429,78 @@ footer .foot .foot_contacto div .foot_contacto_iconos h5 {
 }
 
 /* -------------------------------- nosotras -------------------------------- */
-.nos_portada {
+.body-nosotras .nos_portada {
   display: grid;
-  background-image: url(../../img/fondo-nos.png);
   background-size: contain;
-  max-width: 72rem;
+  max-width: 55em;
   margin: auto;
 }
-.nos_portada .nos_portada_art {
+.body-nosotras .nos_portada .nos_portada_art {
   justify-self: center;
   width: 80%;
-  margin: 1rem 1rem 5rem 1rem;
 }
-.nos_portada .nos_portada_art h2 {
+.body-nosotras .nos_portada .nos_portada_art h2 {
   font-family: "Slabo 27px", serif;
   font-size: 2.5em;
   font-weight: 500;
   text-align: center;
   padding: 0.5em 0em;
   border-bottom: 1px solid gray;
-  margin: 1em 3em;
+  margin: 1em 2em;
 }
-.nos_portada .nos_portada_art p {
+.body-nosotras .nos_portada .nos_portada_art p {
   text-align: center;
   font-size: 1.2em;
 }
 @media screen and (max-width: 990px) {
-  .nos_portada .nos_portada_art {
+  .body-nosotras .nos_portada .nos_portada_art {
     width: 70%;
     font-size: 14px;
   }
 }
 @media screen and (max-width: 770px) {
-  .nos_portada .nos_portada_art {
+  .body-nosotras .nos_portada .nos_portada_art {
     width: 80%;
     font-size: 12px;
   }
 }
-
-.card-nos {
-  position: relative;
-  bottom: 4rem;
+.body-nosotras .cont-colum {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.card-nos .nos_main_art {
-  justify-items: center;
-  width: 90%;
-  padding: 4rem 2rem 1rem 2rem;
-  margin: 0.5;
-  border: 2px solid gray;
-}
-.card-nos .nos_main_img {
-  width: 80%;
-  padding: 1rem;
-  margin: 0rem 2rem 2rem 2rem;
+.body-nosotras .cont-colum img {
+  width: 60%;
   border-radius: 2%;
   position: relative;
-  top: 5rem;
+  top: 3rem;
+  filter: grayscale(100%);
+  transition: all 0.5s;
+}
+.body-nosotras .cont-colum img:hover {
+  filter: none;
+  transform: scale(1.1);
+}
+@media screen and (max-width: 500px) {
+  .body-nosotras .cont-colum img {
+    width: 80%;
+  }
+}
+.body-nosotras .cont-colum .nos_main_art {
+  padding: 4em 3em 0em 3em;
+  margin: 0em 5em 1em 5em;
+  border: 2px solid gray;
+}
+@media screen and (max-width: 1200px) {
+  .body-nosotras .cont-colum .nos_main_art {
+    margin: 0em 3em 1em 3em;
+  }
+}
+@media screen and (max-width: 500px) {
+  .body-nosotras .cont-colum .nos_main_art {
+    margin: 0em 0.5em 1em 0.5em;
+    padding: 3em 1em 0em 1em;
+  }
 }
 
 /* ------------------------------ fin nosotras ------------------------------ */
@@ -503,21 +519,30 @@ footer .foot .foot_contacto div .foot_contacto_iconos h5 {
   margin: 1em 3em;
 }
 
-#sahumerios {
-  margin-top: 2rem;
+.prod-tit {
+  margin: 2rem 0rem 0rem 5rem;
 }
 
-#sahumos {
-  margin-top: 2rem;
+@media screen and (max-width: 991px) {
+  .card-row {
+    justify-content: center;
+  }
 }
-
-#velas {
-  margin-top: 2rem;
+.card-row .cont-card {
+  display: flex;
+  flex-wrap: nowrap;
 }
-
-.item_img {
-  width: 18rem;
-  padding: 0.5rem 0.5rem;
+@media screen and (max-width: 575px) {
+  .card-row .cont-card {
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 575px) {
+  .card-row .card-home {
+    margin: 0rem 2rem;
+    width: 70%;
+    height: auto;
+  }
 }
 
 /* ------------------------------ fin productos ----------------------------- */
@@ -551,7 +576,7 @@ footer .foot .foot_contacto div .foot_contacto_iconos h5 {
 }
 .container-img .evento-descripcion {
   background-color: #f7f4eb;
-  border: 2px solid #747c58;
+  border: 5px solid rgb(219, 206, 161);
   border-radius: 2%;
   color: rgb(63, 44, 8);
   text-align: center;
@@ -699,7 +724,8 @@ footer .foot .foot_contacto div .foot_contacto_iconos h5 {
   text-align: center;
   padding-bottom: 1rem;
   border-bottom: 1px solid gray;
-  margin-bottom: 1rem;
+  margin-top: 1rem;
+  margin-top: 3rem;
 }
 
 .item_contacto {
@@ -734,7 +760,7 @@ footer .foot .foot_contacto div .foot_contacto_iconos h5 {
 
 .mapa {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 /* form  */
