--- a/scss/componentes/_contacto.scss
+++ b/scss/componentes/_contacto.scss
@@ -6,7 +6,8 @@
   text-align: center;
   padding-bottom: 1rem;
   border-bottom: 1px solid gray;
-  margin-bottom: 1rem;
+  margin-top: 1rem;
+  margin-top: 3rem
 }
 
 .item_contacto {
@@ -30,7 +31,6 @@
     padding: 0.4rem;
     text-decoration: none;
     color: black;
-
   }
 
   .r-instagram:hover {
@@ -44,7 +44,7 @@
 
 .mapa {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 /* form  */
