--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -1,35 +1,32 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
-  
-
-  @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Open+Sans:ital,wght@1,600;1,700&family=Slabo+27px&display=swap');
-
-  
-  body {
-    font-family: "roboto";
-    font-weight: 300;
-    text-align: justify;
-    background-color:   rgba(247, 244, 239, 0.904);
-    font-size: 16px;
-  }
+  margin: 0;
+  padding: 0;
+}
 
 
-  // variable colores 
+@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Open+Sans:ital,wght@1,600;1,700&family=Slabo+27px&display=swap');
 
-  $colores: 
-  #747c58, 
-  rgb(243, 243, 225),
-  rgb(219, 206, 161),
-  #a3a59e77,
-  rgb(148, 138, 138);
+
+body {
+  font-family: "roboto";
+  font-weight: 300;
+  text-align: justify;
+  background-color: rgba(247, 244, 239, 0.904);
+  font-size: 16px;
+}
+
+// variable colores 
+
+$colores: #747c58,
+rgb(243, 243, 225),
+rgb(219, 206, 161),
+#a3a59e77,
+rgb(148, 138, 138);
 
 // Mapas
 
-  $redes: (
-    instagram: rgba(208, 34, 214, 0.973),
-    facebook: rgba(33, 108, 221, 0.973), 
+$redes: (instagram: rgba(208, 34, 214, 0.973),
+  facebook: rgba(33, 108, 221, 0.973),
 );
 
 
@@ -43,14 +40,14 @@
   transition: all 1s;
 
   &:hover {
-      background-color: #747c58;
-      color: rgb(243, 243, 225);
-      transform: scale(1.1);
+    background-color: rgb(219, 206, 161);
+    color: white;
+    transform: scale(1.1);
   }
 
   a {
-      text-decoration: none;
-      color: white;
+    text-decoration: none;
+    color: white;
   }
 }
 
@@ -64,7 +61,7 @@
 
 @mixin ubicacion ($tipo, $fila, $columna, $direction) {
   display: $tipo;
-  justify-content: $fila ;
-  align-items: $columna ;
+  justify-content: $fila;
+  align-items: $columna;
   flex-direction: $direction;
 }
