--- a/scss/base/_header-home.scss
+++ b/scss/base/_header-home.scss
@@ -4,7 +4,7 @@
     z-index: 10;
     position: sticky;
     transition: 0.7s;
-    margin-top: 20px;   
+    margin-top: 20px;
     top: 0;
     font-size: 1.3em;
     background-color: transparent;
@@ -23,6 +23,11 @@
                 border-radius: 20%;
                 padding: 0.5em;
                 opacity: 0;
+            }
+
+            .logo-s-fondo {
+                width: 5em;
+                padding: 0.5em;
             }
 
             h1 {
@@ -60,6 +65,10 @@
                 opacity: 1;
             }
 
+            .logo-s-fondo {
+                display: none;
+            }
+
             h1 {
                 color: nth($colores, 3);
                 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -69,8 +78,9 @@
                 align-self: center;
             }
         }
+
         .dropdown-menu {
-            background-color: nth($colores, 1 )
+            background-color: nth($colores, 1)
         }
     }
 
