--- a/scss/componentes/_home.scss
+++ b/scss/componentes/_home.scss
@@ -69,6 +69,13 @@
   }
 }
 
+
+.deco-fila { margin-top: 4em;
+  background-color: rgba(250, 249, 249, 0.788);
+border-radius:  20px;
+
+img {filter: grayscale(1);}}
+
 .home-nosotras {
   padding: 2rem;
   text-align: center;
@@ -79,7 +86,7 @@
     font-weight: 500;
     text-align: center;
     padding: 0.5em 0em;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.603);
     margin-top: 1em }
 
   .btn.nos {
