--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -65,3 +65,5 @@ $redes: (instagram: rgba(208, 34, 214, 0.973),
   align-items: $columna;
   flex-direction: $direction;
 }
+
+.disclaimer { display: none;}
