--- a/scss/componentes/_+info.scss
+++ b/scss/componentes/_+info.scss
@@ -3,6 +3,10 @@
 .body-info {
   max-width: 72em;
   margin: auto;
+  @media screen and (max-width: 570px) {
+    font-size: 12px 
+  }
+
  
   h2 {
     font-family: "Slabo 27px", serif;
@@ -11,8 +15,16 @@
     text-align: center;
     padding: 0.5em 0em;
     border-bottom: 1px solid gray;
-    margin: 1em 6em
+    margin: 1em 6em;
+    @media screen and (max-width: 570px) {
+      margin: 1em 2.5em;
+    }
   }
+    .text-naturaleza { margin: 0em 8em 2em 8em;
+      @media screen and (max-width: 570px) {
+         margin: 0em 2em 2em 2em;
+       }
+    }
   
   .container { margin-bottom: 3em;
 
@@ -34,8 +46,8 @@
   .info1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    font-size: 1rem;
-    line-height: 1.5rem;
+    font-size: 1em;
+    line-height: 1.5em;
 
     video {
       width: 90%;
@@ -76,14 +88,14 @@
 
     @media screen and (max-width: 990px) {
       grid-template-columns: 1fr;
-      font-size: 1rem;
-      line-height: 1.5rem;
+      font-size: 1em;
+      line-height: 1.5em;
     }
   }
 
   h4 {
-    margin-bottom: 2rem;
-    margin-top: 1.5rem;
+    margin-bottom: 2em;
+    margin-top: 1.5em;
   }
 
   .img-fluid {
