--- a/scss/componentes/_mayorista.scss
+++ b/scss/componentes/_mayorista.scss
@@ -13,7 +13,7 @@
     text-align: center;
     padding: 0.5em 0em;
     border-bottom: 1px solid gray;
-    margin: 1em 0em
+    margin: 1em 0em;
   }
 }
 
