--- a/scss/componentes/_nosotras.scss
+++ b/scss/componentes/_nosotras.scss
@@ -27,11 +27,13 @@
 
       @media screen and (max-width: 990px) {
         width: 70%;
+        margin: auto;
         font-size: 14px;
       }
 
       @media screen and (max-width: 770px) {
         width: 80%;
+        margin: auto;
         font-size: 12px;
       }
     }
