--- a/scss/base/_header-home.scss
+++ b/scss/base/_header-home.scss
@@ -10,10 +10,9 @@
     background-color: transparent;
 
     .barra {
+        @include ubicacion (flex, center, "", "");
         max-width: 72rem;
         margin: auto;
-        display: flex;
-        justify-content: center;
 
         .logo {
             display: flex;
@@ -41,8 +40,7 @@
         }
 
         .redes_head {
-            display: flex;
-            align-items: center;
+            @include ubicacion (flex, "", center, "");
 
             .redes_head1 {
                 display: flex;
