--- a/scss/componentes/_+info.scss
+++ b/scss/componentes/_+info.scss
@@ -3,11 +3,12 @@
 .body-info {
   max-width: 72em;
   margin: auto;
+
   @media screen and (max-width: 570px) {
-    font-size: 12px 
+    font-size: 12px
   }
 
- 
+
   h2 {
     font-family: "Slabo 27px", serif;
     font-size: 2.5em;
@@ -16,94 +17,99 @@
     padding: 0.5em 0em;
     border-bottom: 1px solid gray;
     margin: 1em 6em;
+
     @media screen and (max-width: 570px) {
       margin: 1em 2.5em;
     }
   }
-    .text-naturaleza { margin: 0em 8em 2em 8em;
-      @media screen and (max-width: 570px) {
-         margin: 0em 2em 2em 2em;
-       }
-    }
-  
-  .container { margin-bottom: 3em;
 
-  .text-acordeon {
-    font-size: 0.8em;
-    background-color: lighten(nth($colores, 1), 45%);
+  .text-naturaleza {
+    margin: 0em 8em 2em 8em;
 
-    &:not(.collapsed) {
-      color: nth($colores, 2);
-      background-color: nth($colores, 1);
-    }
-
-    &:not(.collapsed)::after {
-      color: nth($colores, 2);
-      background-color: nth($colores, 1);
+    @media screen and (max-width: 570px) {
+      margin: 0em 2em 2em 2em;
     }
   }
 
-  .info1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    font-size: 1em;
-    line-height: 1.5em;
+  .container {
+    margin-bottom: 3em;
 
-    video {
-      width: 90%;
-      justify-self: center;
-      object-fit: cover;
-      height: 100%;
+    .text-acordeon {
+      font-size: 0.8em;
+      background-color: lighten(nth($colores, 1), 45%);
 
-      @media screen and (max-width: 990px) {
-        width: 70%;
+      &:not(.collapsed) {
+        color: nth($colores, 2);
+        background-color: nth($colores, 1);
+      }
+
+      &:not(.collapsed)::after {
+        color: nth($colores, 2);
+        background-color: nth($colores, 1);
       }
     }
 
-    .main_art_video {
-      width: 100%;
-      justify-self: start;
-    }
-
-    .main_art {
-      width: 90%;
-      display: flex;
-      flex-direction: column;
-      justify-self: center;
-      align-self: center;
-    }
-
-    img {
-      width: 70%;
-      border-radius: 1.5%;
-      box-shadow: 10px 5px 5px rgba(173, 140, 77, 0.589);
-      justify-self: center;
-      object-fit: cover;
-      height: 100%;
-
-      @media screen and (max-width: 990px) {
-        width: 70%;
-      }
-    }
-
-    @media screen and (max-width: 990px) {
-      grid-template-columns: 1fr;
+    .info1 {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
       font-size: 1em;
       line-height: 1.5em;
+
+      video {
+        width: 90%;
+        justify-self: center;
+        object-fit: cover;
+        height: 100%;
+
+        @media screen and (max-width: 990px) {
+          width: 70%;
+        }
+      }
+
+      .main_art_video {
+        width: 100%;
+        justify-self: start;
+      }
+
+      .main_art {
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-self: center;
+        align-self: center;
+      }
+
+      img {
+        width: 70%;
+        border-radius: 1.5%;
+        box-shadow: 10px 5px 5px rgba(173, 140, 77, 0.589);
+        justify-self: center;
+        object-fit: cover;
+        height: 100%;
+
+        @media screen and (max-width: 990px) {
+          width: 70%;
+        }
+      }
+
+      @media screen and (max-width: 990px) {
+        grid-template-columns: 1fr;
+        font-size: 1em;
+        line-height: 1.5em;
+      }
+    }
+
+    h4 {
+      margin-bottom: 2em;
+      margin-top: 1.5em;
+    }
+
+    .img-fluid {
+      object-fit: cover;
+      height: 100%;
+      width: 100%;
     }
   }
-
-  h4 {
-    margin-bottom: 2em;
-    margin-top: 1.5em;
-  }
-
-  .img-fluid {
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-  }
-}
 }
 
 /* ------------------------------ Fin + Info ----------------------------- */
