--- a/scss/componentes/_nosotras.scss
+++ b/scss/componentes/_nosotras.scss
@@ -1,84 +1,81 @@
 /* -------------------------------- nosotras -------------------------------- */
 
-  .nos_portada {
-    max-width: 50em;
-    margin: auto;
+.nos_portada {
+  max-width: 50em;
+  margin: auto;
 
-    h2 {
-      font-family: "Slabo 27px", serif;
-      font-size: 2.5em;
-      font-weight: 500;
+  h2 {
+    font-family: "Slabo 27px", serif;
+    font-size: 2.5em;
+    font-weight: 500;
+    text-align: center;
+    padding: 0.5em 0em;
+    border-bottom: 1px solid gray;
+    margin: 1em
+  }
+
+  .nos_portada_art {
+    justify-self: center;
+    padding: 1em 4em;
+    background-color: lighten(nth($colores, 3), 18%);
+    border-radius: 20px;
+
+    p {
       text-align: center;
-      padding: 0.5em 0em;
-      border-bottom: 1px solid gray;
-      margin: 1em
+      font-size: 1.2em;
     }
 
-    .nos_portada_art {
-      justify-self: center;
-      padding: 1em 4em;
-      background-color: lighten(nth($colores, 3), 18%) ;
-      border-radius: 20px;
+    @media screen and (max-width: 990px) {
+      width: 70%;
+      margin: auto;
+      font-size: 14px;
+    }
 
-      p {
-        text-align: center;
-        font-size: 1.2em;
-      }
+    @media screen and (max-width: 770px) {
+      width: 80%;
+      margin: auto;
+      font-size: 12px;
+    }
+  }
+}
 
-      @media screen and (max-width: 990px) {
-        width: 70%;
-        margin: auto;
-        font-size: 14px;
-      }
+.cont-colum {
+  @include ubicacion (flex, "", center, column);
 
-      @media screen and (max-width: 770px) {
-        width: 80%;
-        margin: auto;
-        font-size: 12px;
-      }
+  img {
+    width: 60%;
+    border-radius: 2%;
+    position: relative;
+    top: 3rem;
+    filter: grayscale(100%);
+    transition: all 0.5s;
+
+    &:hover {
+      filter: none;
+      transform: scale(1.1);
+    }
+
+    @media screen and (max-width: 500px) {
+      width: 80%;
     }
   }
 
-  .cont-colum {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  .nos_main_art {
+    // width: 90%;
+    padding: 4em 3em 0em 3em;
+    margin: 0em 5em 1em 5em;
+    border: 2px solid gray;
 
-    img {
-      width: 60%;
-      border-radius: 2%;
-      position: relative;
-      top: 3rem;
-      filter: grayscale(100%);
-      transition: all 0.5s;
-
-      &:hover {
-        filter: none;
-        transform: scale(1.1);
-      }
-
-      @media screen and (max-width: 500px) {
-        width: 80%;
-      }
+    @media screen and (max-width: 1200px) {
+      margin: 0em 3em 1em 3em
     }
 
-    .nos_main_art {
-      // width: 90%;
-      padding: 4em 3em 0em 3em;
-      margin: 0em 5em 1em 5em;
-      border: 2px solid gray;
-
-      @media screen and (max-width: 1200px) {
-        margin: 0em 3em 1em 3em
-      }
-
-      @media screen and (max-width: 500px) {
-        margin: 0em 0.5em 1em 0.5em;
-        padding: 3em 1em 0em 1em;
-      }
+    @media screen and (max-width: 500px) {
+      margin: 0em 0.5em 1em 0.5em;
+      padding: 3em 1em 0em 1em;
     }
-
   }
+}
 
 
 
