--- a/scss/base/_header-home.scss
+++ b/scss/base/_header-home.scss
@@ -15,6 +15,8 @@
         margin: auto;
 
         .logo {
+            position: relative;
+            right: 2em;
             display: flex;
 
             .logo-img {
@@ -26,15 +28,15 @@
 
             .logo-s-fondo {
                 width: 5em;
-                padding: 0.5em;
-            }
-
+                padding: 0.5em 0.5em 1em 0em; }
+            
             h1 {
                 color: nth($colores, 3);
                 font-family: 'Raleway', sans-serif;
                 font-size: 3em;
                 font-weight: unset;
                 align-self: center;
+               
             }
         }
 
@@ -58,6 +60,8 @@
         font-size: 1rem;
 
         .logo {
+            right: 0;
+        
             .logo-img {
                 opacity: 1;
             }
