--- a/scss/componentes/_home.scss
+++ b/scss/componentes/_home.scss
@@ -45,26 +45,23 @@
     margin-bottom: 1em;
   }
 
-  .productos-destacados { 
-    margin: 8em 1em;
-
-  .splide__slide img {
-    width: 100%;
-    height: auto;
-  }
-}
-
   .container {
     max-width: 72em;
     margin: auto;
+
     @media screen and (max-width: 576px) {
       max-width: 400px;
       margin: auto;
     }
-    
+
+    .first-text {
+      @media screen and (max-width: 576px) {
+        font-size: 12px;
+        padding: 0em 3em;
+      }
       .tit-segunda-section {
         font-family: 'Poppins', sans-serif;
-        font-size: 60px;
+        font-size: 3.75em;
         line-height: 60px;
         font-weight: bold
       }
@@ -74,52 +71,71 @@
         font-size: 1.3em;
         font-family: 'Poppins', sans-serif;
       }
+
+      .btn {
+        @extend %boton
+      }
+    }
+
+    .card-home {
+      box-shadow: 0 0 30px 0 rgb(61, 39, 39);
+
       .btn {
         @extend %boton
       }
 
-      .card-home {
-        box-shadow: 0 0 30px 0 rgb(61, 39, 39);
+      .card-img-top {
+        transition: all 1s;
+        padding: 1em 1em;
 
-        .btn {
-          @extend %boton
+        img {
+          width: 100%;
+          align-self: center;
         }
 
-        .card-img-top {
-          transition: all 1s;
-          padding: 1em 1em;
-
-          img {width: 100%; align-self: center;}
-
-          &:hover {
-            transform: scale(1.1);
-          }
+        &:hover {
+          transform: scale(1.1);
         }
+      }
+      @media screen and (max-width: 576px) {
 
-      
+      width: 80%;
+      height: auto;
+      }
     }
   }
 
+  .productos-destacados {
+    margin: 8em 1em;
 
+    @media screen and (max-width: 576px) {
+      font-size: 12px;
+      margin: 4em 0em;}
 
-.home-nosotras {
-  padding: 2rem;
-  text-align: center;
-
-
-
-  .btn.nos {
-    @extend %boton;
-    @include ubicacion (flex, center, "", "");
-    padding: 0.6rem 0.8rem;
-    margin: 1rem 4rem;
+    .splide__slide img {
+      width: 100%;
+      height: auto;
+    }
   }
-}
 
-.img_nosotras {
-  width: 100%;
-  padding: 2em;
-}
+  .home-nosotras {
+    padding: 2rem;
+    text-align: center;
+
+    .btn.nos {
+      @extend %boton;
+      @include ubicacion (flex, center, "", "");
+      padding: 0.6rem 0.8rem;
+      margin: 1rem 4rem;
+    }
+  }
+
+  .img_nosotras {
+    width: 100%;
+    padding: 2em;
+    @media screen and (max-width: 576px) {
+      padding: 1em;}
+  }
 }
 
 // fin cuerpo home 
