--- a/scss/componentes/_nosotras.scss
+++ b/scss/componentes/_nosotras.scss
@@ -30,9 +30,10 @@
     }
 
     @media screen and (max-width: 770px) {
-      width: 80%;
+      width: 90%;
       margin: auto;
       font-size: 12px;
+      padding: 0em;
     }
   }
 }
