--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -24,7 +24,10 @@ $colores: #747c58,
 rgb(243, 243, 225),
 rgb(219, 206, 161),
 #a3a59e77,
-rgb(148, 138, 138);
+rgb(148, 138, 138),
+#575253,
+#61584f,
+#e9e5d5;
 
 // Mapas
 
