--- a/css/style.css
+++ b/css/style.css
@@ -605,7 +605,14 @@ footer .foot .foot_contacto div .foot_contacto_iconos h5 {
 }
 
 .prod-tit {
-  margin: 2rem 0rem 0rem 5rem;
+  margin: 2em 2em 0em 2em;
+  padding: 0.5em 2em;
+  background-color: #e9e5d5;
+  color: #61584f;
+  font-weight: bold;
+  border-radius: 20px;
+  text-align: start;
+  padding: 0.5em;
 }
 @media screen and (max-width: 575px) {
   .prod-tit {
@@ -843,121 +850,145 @@ footer .foot .foot_contacto div .foot_contacto_iconos h5 {
 
 /* ------------------------------ Fin + Info ----------------------------- */
 /* -------------------------------- contacto -------------------------------- */
-.contacto-tit {
-  font-size: 1.5rem;
-  text-align: center;
-  padding-bottom: 1rem;
-  border-bottom: 1px solid gray;
-  margin-top: 3rem;
+.contacto-page {
+  /* form  */
 }
-
-.item_contacto {
+@media screen and (max-width: 1200px) {
+  .contacto-page {
+    max-width: 100%;
+  }
+}
+@media screen and (max-width: 571px) {
+  .contacto-page {
+    font-size: 14px;
+  }
+}
+.contacto-page .contacto-tit {
+  background-color: #e9e5d5;
+  color: #61584f;
+  font-weight: bold;
+  border-radius: 20px;
+  font-size: 1.5em;
+  text-align: center;
+  padding: 0.4em;
+  border-bottom: 1px solid gray;
+  margin-top: 1em;
+}
+.contacto-page .item_contacto {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: "";
   flex-direction: "";
   text-align: start;
+  padding-top: 0.8em;
+  padding-left: 2.5em;
 }
-.item_contacto img {
+.contacto-page .item_contacto img {
   margin-right: 0.5em;
 }
-.item_contacto .wp-n {
+.contacto-page .item_contacto .wp-n {
   padding-right: 1em;
 }
-
-.item_redes {
+.contacto-page .item_redes {
   display: flex;
   justify-content: center;
   align-items: "";
   flex-direction: "";
   padding: 0.4rem;
 }
-.item_redes a {
+.contacto-page .item_redes a {
   align-items: center;
   padding: 0.4rem;
   text-decoration: none;
   color: black;
 }
-.item_redes .r-instagram:hover {
+.contacto-page .item_redes .r-instagram {
+  text-align: start;
+}
+.contacto-page .item_redes .r-instagram:hover {
   color: rgba(208, 34, 214, 0.973);
+  text-align: start;
 }
-.item_redes .r-facebook:hover {
+.contacto-page .item_redes .r-facebook {
+  text-align: start;
+}
+.contacto-page .item_redes .r-facebook:hover {
   color: rgba(33, 108, 221, 0.973);
+  text-align: start;
 }
-
-.mapa {
+.contacto-page .mapa {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
-
-/* form  */
-.form-container {
+.contacto-page .form-container {
   display: flex;
   justify-content: "";
   align-items: center;
   flex-direction: column;
   background-color: rgb(226, 225, 225);
+  border-radius: 20px;
 }
-.form-container .form-tit {
+.contacto-page .form-container .form-tit {
   text-align: center;
   border-color: 1px solid rgb(228, 223, 223);
   border-radius: 3px;
-  margin: 0.5rem 0;
-  padding: 0.4rem;
+  margin: 0.5em 0;
+  padding: 0.4em;
+  font-size: 1.5em;
 }
-.form-container .contacto-form {
+.contacto-page .form-container .contacto-form {
   border: 1px solid rgb(228, 223, 223);
   border-radius: 3px;
   width: 80%;
-  margin: 0 0 1.5rem 0;
+  margin: 0 0 1.5em 0;
 }
-.form-container .contacto-form .form-row {
+.contacto-page .form-container .contacto-form .form-row {
   display: flex;
   justify-content: flex-start;
   align-items: "";
   flex-direction: column;
   flex-wrap: wrap;
-  margin-bottom: 20px;
+  margin-bottom: 0.8em;
 }
-.form-container .contacto-form .form-row label {
-  margin-bottom: 10px;
+.contacto-page .form-container .contacto-form .form-row label {
+  margin-bottom: 0.5em;
 }
-.form-container .contacto-form .form-row input[type=text],
-.form-container .contacto-form .form-row input[type=email],
-.form-container .contacto-form .form-row input[type=number] {
+.contacto-page .form-container .contacto-form .form-row input[type=text],
+.contacto-page .form-container .contacto-form .form-row input[type=email],
+.contacto-page .form-container .contacto-form .form-row input[type=number] {
   background-color: white;
   border: 1px solid rgb(163, 163, 167);
   border-radius: 3px;
   width: 100%;
   padding: 8px;
 }
-.form-container .contacto-form .form-row textarea {
+.contacto-page .form-container .contacto-form .form-row textarea {
   background-color: white;
   border: 1px solid rgb(163, 163, 167);
   border-radius: 3px;
-  margin-bottom: 10px;
+  margin-bottom: 0.5em;
   padding: 7px;
   min-height: 100px;
   min-width: 100%;
   resize: none;
 }
-.form-container .contacto-form .form-row .instructions {
+.contacto-page .form-container .contacto-form .form-row .instructions {
   color: rgb(109, 107, 107);
-  margin-bottom: 20px;
+  margin-bottom: 0.8em;
 }
-.form-container .contacto-form .form-row button {
+.contacto-page .form-container .contacto-form .form-row button {
   font-weight: bold;
   color: white;
   background-color: rgb(100, 157, 204);
   border: none;
   border-radius: 3px;
-  padding: 10px 30px;
+  padding: 0.8em 1em;
   cursor: pointer;
 }
-.form-container .contacto-form .form-row button:hover {
+.contacto-page .form-container .contacto-form .form-row button:hover {
   background-color: rgb(131, 171, 243);
 }
-.form-container .contacto-form .form-row button:active {
+.contacto-page .form-container .contacto-form .form-row button:active {
   background-color: rgb(76, 132, 238);
 }
 
